# hoffmann_et_al_2023

./: LICENSE  pyproject.toml  readme.md
notebooks/: All.ipynb  Figure_3.ipynb  Figure_4b_c.ipynb  Figure_4b_c_d.ipynb  Figure_5.ipynb  Single_Dataset.ipynb  deconvolve_test.ipynb  gen_figure_data.ipynb  gen_figures.ipynb  generate_figures.ipynb  test.ipynb
src/wholebrain/: __init__.py  cluster.py  regression.py  spatial.py  stats.py  traces.py  util.py  visualize.py  xpu.py
src/wholebrain/gpu/: README.md
